# nostr_paywall_example

./: .env.example  .gitignore  Cargo.toml  README.md
src/: db.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs
